fix source and doc branch for metavision_driver

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4196,7 +4196,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: humble
+      version: release
     release:
       tags:
         release: release/humble/{package}/{version}
@@ -4205,7 +4205,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: humble
+      version: release
     status: developed
   metrics_msgs:
     doc:
