--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3249,7 +3249,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: iron
+      version: release
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -3258,7 +3258,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: iron
+      version: release
     status: developed
   micro_ros_diagnostics:
     doc:
