--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -3433,7 +3433,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: rolling
+      version: release
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -3442,7 +3442,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: rolling
+      version: release
     status: developed
   micro_ros_diagnostics:
     doc:
