--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -3346,7 +3346,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: rolling
+      version: release
     release:
       tags:
         release: release/rolling/{package}/{version}
@@ -3355,7 +3355,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-event-camera/metavision_driver.git
-      version: rolling
+      version: release
     status: developed
   micro_ros_diagnostics:
     doc:
