--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -5887,6 +5887,16 @@ repositories:
       url: https://github.com/ros-controls/ros2_controllers.git
       version: master
     status: developed
+  ros2_easy_test:
+    doc:
+      type: git
+      url: https://github.com/felixdivo/ros2-easy-test.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/felixdivo/ros2-easy-test.git
+      version: main
+    status: developed
   ros2_kortex:
     doc:
       type: git
