Add missing nixos rules (#41981)
* Add missing nixos rules

* Fix tbb nixos rosdep key

* Use tbb_2021_11

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4552,6 +4552,7 @@ libnss3-dev:
 liboctomap-dev:
   debian: [liboctomap-dev]
   fedora: [octomap-devel]
+  nixos: [octomap]
   rhel: [octomap-devel]
   ubuntu: [liboctomap-dev]
 libogg:
@@ -8442,7 +8443,7 @@ tbb:
   fedora: [tbb-devel]
   gentoo: [dev-cpp/tbb]
   macports: [tbb]
-  nixos: [tbb_2021_8]
+  nixos: [tbb_2021_11]
   openembedded: [tbb@meta-oe]
   opensuse: [tbb-devel]
   rhel: [tbb-devel]
