Disable beluga devel jobs
Signed-off-by: Michel Hidalgo <michel@ekumenlabs.com>

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -587,6 +587,8 @@ repositories:
       type: git
       url: https://github.com/Ekumen-OS/beluga.git
       version: main
+      test_commits: false
+      test_pull_requests: false
     status: developed
   bond_core:
     doc:
