--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -866,6 +866,8 @@ repositories:
       type: git
       url: https://github.com/Ekumen-OS/beluga.git
       version: main
+      test_commits: false
+      test_pull_requests: false
     status: developed
   bno055:
     doc:
