--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -757,6 +757,8 @@ repositories:
       url: https://github.com/ros2-gbp/beluga-release.git
       version: 2.0.2-1
     source:
+      test_commits: false
+      test_pull_requests: false
       type: git
       url: https://github.com/Ekumen-OS/beluga.git
       version: main
