spatio_temporal_voxel_layer: 2.5.0-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7552,6 +7552,16 @@ repositories:
       url: https://github.com/clalancette/sophus.git
       version: release/1.22.x
     status: maintained
+  spatio_temporal_voxel_layer:
+    release:
+      packages:
+      - openvdb_vendor
+      - spatio_temporal_voxel_layer
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/SteveMacenski/spatio_temporal_voxel_layer-release.git
+      version: 2.5.0-1
+    status: maintained
   spdlog_vendor:
     release:
       tags:
