Update adi_tmc_coe commit

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -90,6 +90,16 @@ repositories:
       url: https://github.com/analogdevicesinc/tmcl_ros.git
       version: noetic
     status: maintained
+  adi_tmc_coe:
+    doc:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_tmc_coe.git
+      version: noetic
+    source:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_tmc_coe.git
+      version: noetic
+    status: maintained
   agni_tf_tools:
     doc:
       type: git
