--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1206,12 +1206,12 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/diagnostics-release.git
-      version: 4.2.0-1
+      version: 3.1.2-3
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/diagnostics.git
-      version: ros2-jazzy
+      version: ros2
     status: maintained
   dolly:
     doc:
