--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3920,6 +3920,16 @@ repositories:
       url: https://github.com/koide3/ndt_omp.git
       version: master
     status: developed
+  neo_nav2_bringup:
+    doc:
+      type: git
+      url: https://github.com/neobotix/neo_nav2_bringup.git
+      version: iron
+    source:
+      type: git
+      url: https://github.com/neobotix/neo_nav2_bringup.git
+      version: iron
+    status: maintained
   neo_simulation2:
     doc:
       type: git
