--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -99,6 +99,10 @@ repositories:
       type: git
       url: https://github.com/analogdevicesinc/adi_tmc_coe.git
       version: noetic
+    source:
+      type: git
+      url: https://github.com/analogdevicesinc/adi_tmc_coe.git
+      version: noetic
     status: maintained
   agni_tf_tools:
     doc:
