feat: add source entry for ncnn into jazzy and rolling
Signed-off-by: wep21 <daisuke.nishimatsu1021@gmail.com>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4034,6 +4034,16 @@ repositories:
       url: https://github.com/ros-planning/navigation_msgs.git
       version: jazzy
     status: maintained
+  ncnn:
+    doc:
+      type: git
+      url: https://github.com/Tencent/ncnn.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/Tencent/ncnn.git
+      version: master
+    status: maintained
   neo_simulation2:
     doc:
       type: git
