--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -3877,6 +3877,16 @@ repositories:
       url: https://github.com/ros-planning/navigation_msgs.git
       version: rolling
     status: maintained
+  ncnn:
+    doc:
+      type: git
+      url: https://github.com/Tencent/ncnn.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/Tencent/ncnn.git
+      version: master
+    status: maintained
   neo_simulation2:
     doc:
       type: git
