nicla_vision_ros: 1.0.1-1 in 'noetic/distribution.yaml' [bloom]

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -6779,6 +6779,21 @@ repositories:
       url: https://github.com/astuff/network_interface.git
       version: master
     status: maintained
+  nicla_vision_ros:
+    doc:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros.git
+      version: master
+    release:
+      tags:
+        release: release/noetic/{package}/{version}
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros-release.git
+      version: 1.0.1-1
+    source:
+      type: git
+      url: https://github.com/ADVRHumanoids/nicla_vision_ros.git
+      version: master
+    status: maintained
   nmea_comms:
     doc:
       type: git
