--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -389,6 +389,7 @@ repositories:
       version: humble
     release:
       packages:
+      - andino_apps
       - andino_base
       - andino_bringup
       - andino_control
@@ -401,7 +402,7 @@ repositories:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/andino-release.git
-      version: 0.1.0-1
+      version: 0.2.0-1
     source:
       test_pull_requests: true
       type: git
