--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5061,6 +5061,11 @@ repositories:
       type: git
       url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
       version: humble
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/nicla_vision_ros2-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
