--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4069,6 +4069,11 @@ repositories:
       type: git
       url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
       version: jazzy
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/nicla_vision_ros2-release.git
+      version: 1.1.1-1
     source:
       type: git
       url: https://github.com/ADVRHumanoids/nicla_vision_ros2.git
