--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6265,6 +6265,13 @@ repositories:
       url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
       version: jazzy
     status: maintained
+  ros_battery_monitoring:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ipa320/ros_battery_monitoring.git
+      version: main
+    status: developed
   ros_canopen:
     release:
       packages:
