--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6266,6 +6266,10 @@ repositories:
       version: jazzy
     status: maintained
   ros_battery_monitoring:
+    doc:
+      type: git
+      url: https://github.com/ipa320/ros_battery_monitoring.git
+      version: main
     source:
       test_pull_requests: true
       type: git
