--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6062,6 +6062,10 @@ repositories:
       version: main
     status: maintained
   ros_battery_monitoring:
+    doc:
+      type: git
+      url: https://github.com/ipa320/ros_battery_monitoring.git
+      version: main
     source:
       test_pull_requests: true
       type: git
