fixup! Include draco-static RPM in libdraco-dev rule to match Ubuntu

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3281,7 +3281,9 @@ libdpkg-dev:
 libdraco-dev:
   arch: [draco]
   debian: [libdraco-dev]
-  fedora: [draco-devel, draco-static]
+  fedora:
+    '*': [draco-devel, draco-static]
+    '39': [draco-devel]
   nixos: [draco]
   rhel:
     '*': [draco-devel, draco-static]
