Add lsb_release RPM to python3-distro rule
On Ubuntu, the lsb_release executable is a required dependency of
python3-distro. On Fedora and RHEL, it is a soft dependency. To maintain
resource parity, we should explicitly list the dependency here.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5571,10 +5571,10 @@ python3-dill:
   ubuntu: [python3-dill]
 python3-distro:
   debian: [python3-distro]
-  fedora: [python3-distro]
+  fedora: [python3-distro, lsb_release]
   gentoo: [dev-python/distro]
   nixos: [python3Packages.distro]
-  rhel: [python3-distro]
+  rhel: [python3-distro, lsb_release]
   ubuntu: [python3-distro]
 python3-distutils:
   debian:
