Add lm_sensors rule for RHEL

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -5861,6 +5861,7 @@ libsensors4-dev:
   nixos: [lm_sensors]
   openembedded: [lmsensors@meta-oe]
   opensuse: [libsensors4-devel]
+  rhel: [lm_sensors-devel]
   ubuntu: [libsensors4-dev]
 libserial-dev:
   debian: [libserial-dev]
