fixup! Add lsb_release RPM to python3-distro rule

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5574,7 +5574,9 @@ python3-distro:
   fedora: [python3-distro, lsb_release]
   gentoo: [dev-python/distro]
   nixos: [python3Packages.distro]
-  rhel: [python3-distro, lsb_release]
+  rhel:
+    '*': [python3-distro, lsb_release]
+    '8': [python3-distro, redhat-lsb-core]
   ubuntu: [python3-distro]
 python3-distutils:
   debian:
