Add libpaho-mqtt{,-dev} rules for RHEL

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4825,6 +4825,7 @@ libpaho-mqtt:
   nixos: [paho-mqtt-c]
   openembedded: [paho-mqtt-c@meta-oe]
   opensuse: [libpaho-mqtt1]
+  rhel: [paho-c]
   ubuntu:
     '*': [libpaho-mqtt1.3]
     bionic: null
@@ -4836,6 +4837,7 @@ libpaho-mqtt-dev:
   nixos: [paho-mqtt-c]
   openembedded: [paho-mqtt-c@meta-oe]
   opensuse: [libpaho-mqtt-devel]
+  rhel: [paho-c-devel]
   ubuntu:
     '*': [libpaho-mqtt-dev]
     bionic: null
