Add catch2 rule for RHEL 9

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -473,6 +473,9 @@ catch2:
   freebsd: [catch2]
   gentoo: [dev-cpp/catch]
   nixos: [catch2]
+  rhel:
+    '*': [catch2-devel]
+    '8': null
   ubuntu:
     '*': [catch2]
     focal: null
