Fix libusb{,-dev} rules for Fedora and RHEL

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6208,10 +6208,11 @@ liburdfdom-tools:
 libusb:
   arch: [libusb-compat]
   debian: [libusb-0.1-4]
-  fedora: [libusb]
+  fedora: [libusb-compat-0.1]
   gentoo: ['virtual/libusb:0']
   macports: [libusb]
   nixos: [libusb-compat-0_1]
+  rhel: [libusb]
   ubuntu: [libusb-0.1-4]
 libusb-1.0:
   arch: [libusbx]
@@ -6237,7 +6238,7 @@ libusb-1.0-dev:
 libusb-dev:
   arch: [libusb-compat]
   debian: [libusb-dev]
-  fedora: [libusb-devel]
+  fedora: [libusb-compat-0.1-devel]
   gentoo: [virtual/libusb]
   macports: [libusb]
   nixos: [libusb1]
