Add rapidjson-dev rule for RHEL

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7897,6 +7897,7 @@ rapidjson-dev:
   fedora: [rapidjson]
   gentoo: [dev-libs/rapidjson]
   nixos: [rapidjson]
+  rhel: [rapidjson-devel]
   ubuntu: [rapidjson-dev]
 readline-dev:
   arch: [readline]
