Adds andino_gz_to humble index.
Signed-off-by: Franco Cipollone <franco.c@ekumenlabs.com>

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -409,6 +409,17 @@ repositories:
       url: https://github.com/Ekumen-OS/andino.git
       version: humble
     status: developed
+  andino_gz:
+    doc:
+      type: git
+      url: https://github.com/Ekumen-OS/andino_gz.git
+      version: humble
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/Ekumen-OS/andino_gz.git
+      version: humble
+    status: developed
   angles:
     doc:
       type: git
