Add libpaho-mqtt{,-dev} rules for RHEL (#42164)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4828,6 +4828,7 @@ libpaho-mqtt:
   nixos: [paho-mqtt-c]
   openembedded: [paho-mqtt-c@meta-oe]
   opensuse: [libpaho-mqtt1]
+  rhel: [paho-c]
   ubuntu:
     '*': [libpaho-mqtt1.3]
     bionic: null
@@ -4839,6 +4840,7 @@ libpaho-mqtt-dev:
   nixos: [paho-mqtt-c]
   openembedded: [paho-mqtt-c@meta-oe]
   opensuse: [libpaho-mqtt-devel]
+  rhel: [paho-c-devel]
   ubuntu:
     '*': [libpaho-mqtt-dev]
     bionic: null
