--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -8376,6 +8376,7 @@ swig:
   gentoo: [dev-lang/swig]
   nixos: [swig]
   openembedded: [swig@openembedded-core]
+  rhel: [swig]
   ubuntu: [swig]
 swig-wx:
   gentoo: [dev-lang/swig]
