Include draco-static RPM in libdraco-dev rule to match Ubuntu (#42160)
* Include draco-static RPM in libdraco-dev rule to match Ubuntu

On Ubuntu, the libdraco-dev package contains both dynamic and static
libraries for draco. On Fedora and RHEL, the libraries are part of
separate subpackages.

* fixup! Include draco-static RPM in libdraco-dev rule to match Ubuntu

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -3284,10 +3284,12 @@ libdpkg-dev:
 libdraco-dev:
   arch: [draco]
   debian: [libdraco-dev]
-  fedora: [draco-devel]
+  fedora:
+    '*': [draco-devel, draco-static]
+    '39': [draco-devel]
   nixos: [draco]
   rhel:
-    '*': [draco-devel]
+    '*': [draco-devel, draco-static]
     '8': null
   ubuntu:
     '*': [libdraco-dev]
