Add `tkintermapview` pip dependency to python.yaml (#42144)
* Added tkintermapview to rosdep keys

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9594,6 +9594,10 @@ python3-tk:
   opensuse: [python3-tk]
   rhel: ['python%{python3_pkgversion}-tkinter']
   ubuntu: [python3-tk]
+python3-tkintermapview-pip:
+  '*':
+    pip:
+      packages: [tkintermapview]
 python3-toml:
   debian: [python3-toml]
   fedora: [python3-toml]
