--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7554,6 +7554,7 @@ repositories:
       - imu_sensor_broadcaster
       - joint_state_broadcaster
       - joint_trajectory_controller
+      - pid_controller
       - position_controllers
       - range_sensor_broadcaster
       - ros2_controllers
@@ -7566,7 +7567,7 @@ repositories:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/ros2_controllers-release.git
-      version: 2.36.0-1
+      version: 2.37.0-1
     source:
       type: git
       url: https://github.com/ros-controls/ros2_controllers.git
