naming convention and placement

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9518,6 +9518,16 @@ python3-timm-pip:
   ubuntu:
     pip:
       packages: [timm]
+python3-tinkerforge-pip:
+  debian:
+    pip:
+      packages: [tinkerforge]
+  fedora:
+    pip:
+      packages: [tinkerforge]
+  ubuntu:
+    pip:
+      packages: [tinkerforge]
 python3-tk:
   debian: [python3-tk]
   fedora: [python3-tkinter]
@@ -10142,16 +10152,6 @@ tilestache:
   debian: [tilestache]
   fedora: [python-tilestache]
   ubuntu: [tilestache]
-tinkerforge:
-  debian:
-    pip:
-      packages: [tinkerforge]
-  fedora:
-    pip:
-      packages: [tinkerforge]
-  ubuntu:
-    pip:
-      packages: [tinkerforge]
 uavcan-pip:
   debian:
     pip:
