Add tinkerforge pip (#41979)
* add tinkerforge to python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9585,6 +9585,16 @@ python3-timm-pip:
   ubuntu:
     pip:
       packages: [timm]
+python3-tinkerforge-pip:
+  debian:
+    pip:
+      packages: [tinkerforge]
+  fedora:
+    pip:
+      packages: [tinkerforge]
+  ubuntu:
+    pip:
+      packages: [tinkerforge]
 python3-tk:
   debian: [python3-tk]
   fedora: [python3-tkinter]
