Changed pip to binary packages for Ubuntu

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6866,14 +6866,10 @@ python3-lockfile:
   opensuse: [python-lockfile]
   rhel: [python3-lockfile]
   ubuntu: [python3-lockfile]
-python3-luma-core-pip:
-  '*':
-    pip:
-      packages: [luma.core]
-python3-luma-oled-pip:
-  '*':
-    pip:
-      packages: [luma.oled]
+python3-luma-core:
+  ubuntu: [python3-luma.core]
+python3-luma-oled:
+  ubuntu: [python3-luma.oled]
 python3-lttng:
   alpine: [py3-lttng]
   arch: [python-lttngust]
