Specified ubuntu version

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6867,9 +6867,13 @@ python3-lockfile:
   rhel: [python3-lockfile]
   ubuntu: [python3-lockfile]
 python3-luma-core:
-  ubuntu: [python3-luma.core]
+  ubuntu:
+    jammy: [python3-luma.core]
+    noble: [python3-luma.core]
 python3-luma-oled:
-  ubuntu: [python3-luma.oled]
+  ubuntu:
+    jammy: [python3-luma.oled]
+    noble: [python3-luma.oled]
 python3-lttng:
   alpine: [py3-lttng]
   arch: [python-lttngust]
