dataspeed_can: 2.0.4-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1527,11 +1527,13 @@ repositories:
       packages:
       - dataspeed_can
       - dataspeed_can_msg_filters
+      - dataspeed_can_msgs
+      - dataspeed_can_tools
       - dataspeed_can_usb
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/DataspeedInc-release/dataspeed_can-release.git
-      version: 2.0.1-1
+      version: 2.0.4-1
     source:
       type: git
       url: https://bitbucket.org/dataspeedinc/dataspeed_can.git
