Default to package instead of null
Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8317,11 +8317,12 @@ python3-pyqt5.qtwebengine:
   ubuntu: [python3-pyqt5.qtwebengine]
 python3-pyqt6.qtmultimedia:
   debian:
-    bullseye: null
     '*': [python3-pyqt6.qtmultimedia]
+    bullseye: null
   ubuntu:
-    '*': null
-    'noble': [python3-pyqt6.qtmultimedia]
+    '*': [python3-pyqt6.qtmultimedia]
+    focal: null
+    jammy: null
 python3-pyqtdarktheme-pip:
   debian:
     pip:
