Index mola_lidar_odometry as source entry

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3396,6 +3396,16 @@ repositories:
       url: https://github.com/MOLAorg/mola_common.git
       version: develop
     status: developed
+  mola_lidar_odometry:
+    doc:
+      type: git
+      url: https://github.com/MOLAorg/mola_lidar_odometry.git
+      version: develop
+    source:
+      type: git
+      url: https://github.com/MOLAorg/mola_lidar_odometry.git
+      version: develop
+    status: developed
   mola_test_datasets:
     doc:
       type: git
