Update distribution.yaml (#42184)

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8811,6 +8811,12 @@ repositories:
       url: https://github.com/PickNikRobotics/rviz_visual_tools.git
       version: ros2
     status: maintained
+  scenario_execution:
+    source:
+      type: git
+      url: https://github.com/IntelLabs/scenario_execution.git
+      version: main
+    status: maintained
   schunk_svh_library:
     doc:
       type: git
