add ros_battery_monitoring repository (#42157)
* add ros_battery_monitoring repository

* add doc entries for ros_battery_monitoring

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6348,6 +6348,17 @@ repositories:
       url: https://github.com/LOEWE-emergenCITY/ros2_babel_fish.git
       version: jazzy
     status: maintained
+  ros_battery_monitoring:
+    doc:
+      type: git
+      url: https://github.com/ipa320/ros_battery_monitoring.git
+      version: main
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ipa320/ros_battery_monitoring.git
+      version: main
+    status: developed
   ros_canopen:
     release:
       packages:
