--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -4862,6 +4862,16 @@ repositories:
       url: https://github.com/ros2/python_cmake_module.git
       version: rolling
     status: developed
+  python_mrpt_ros:
+    doc:
+      type: git
+      url: https://github.com/MRPT/python_mrpt_ros.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/MRPT/python_mrpt_ros.git
+      version: main
+    status: developed
   python_qt_binding:
     doc:
       type: git
