--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3584,20 +3584,13 @@ repositories:
       version: main
     status: maintained
   mrpt2:
-    doc:
-      type: git
-      url: https://github.com/MRPT/mrpt.git
-      version: develop
     release:
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/mrpt2-release.git
       version: 2.13.4-1
-    source:
-      type: git
-      url: https://github.com/MRPT/mrpt.git
-      version: develop
-    status: developed
+    status: end-of-life
+    status_description: Deprecated by packages mrpt_ros and python_mrpt_ros
   mrpt_msgs:
     doc:
       type: git
