--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -3741,6 +3741,16 @@ repositories:
       url: https://github.com/MRPT/mrpt_path_planning.git
       version: develop
     status: developed
+  mrpt_ros:
+    doc:
+      type: git
+      url: https://github.com/MRPT/mrpt_ros.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/MRPT/mrpt_ros.git
+      version: main
+    status: developed
   mrpt_sensors:
     doc:
       type: git
@@ -4844,6 +4854,16 @@ repositories:
       type: git
       url: https://github.com/ros2/python_cmake_module.git
       version: rolling
+    status: developed
+  python_mrpt_ros:
+    doc:
+      type: git
+      url: https://github.com/MRPT/python_mrpt_ros.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/MRPT/python_mrpt_ros.git
+      version: main
     status: developed
   python_qt_binding:
     doc:
