Add PyRoboSim to python.yaml (#42205)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8351,6 +8351,10 @@ python3-pyro-ppl-pip:
   ubuntu:
     pip:
       packages: [pyro-ppl]
+python3-pyrobosim-pip:
+  '*':
+    pip:
+      packages: [pyrobosim]
 python3-pyrr-pip:
   debian:
     pip:
