puma_motor_driver: 1.0.0-1 in 'humble/distribution.yaml' [bloom] (#42213)

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -6234,6 +6234,25 @@ repositories:
       url: https://github.com/umdlife/psdk_ros2.git
       version: main
     status: maintained
+  puma_motor_driver:
+    doc:
+      type: git
+      url: https://github.com/clearpathrobotics/puma_motor_driver.git
+      version: foxy-devel
+    release:
+      packages:
+      - clearpath_socketcan_interface
+      - puma_motor_driver
+      - puma_motor_msgs
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/clearpath-gbp/puma_motor_driver-release.git
+      version: 1.0.0-1
+    source:
+      type: git
+      url: https://github.com/clearpathrobotics/puma_motor_driver.git
+      version: foxy-devel
+    status: maintained
   py_binding_tools:
     release:
       tags:
