dbw_ros: 2.2.0-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1143,6 +1143,26 @@ repositories:
       url: https://bitbucket.org/dataspeedinc/dataspeed_can.git
       version: ros2
     status: maintained
+  dbw_ros:
+    doc:
+      type: git
+      url: https://bitbucket.org/dataspeedinc/dbw_ros.git
+      version: ros2
+    release:
+      packages:
+      - ds_dbw
+      - ds_dbw_can
+      - ds_dbw_joystick_demo
+      - ds_dbw_msgs
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/DataspeedInc-release/dbw_ros-release.git
+      version: 2.2.0-1
+    source:
+      type: git
+      url: https://bitbucket.org/dataspeedinc/dbw_ros.git
+      version: ros2
+    status: developed
   demos:
     doc:
       type: git
