--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4891,6 +4891,7 @@ python3-ansible-runner-pip:
     pip:
       packages: [ansible-runner]
 python3-antlr4:
+  debian: [python3-antlr4]
   ubuntu: [python3-antlr4]
 python3-anytree-pip:
   debian:
