adding lm_sensors for rhel
Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -6759,6 +6759,7 @@ lm-sensors:
   gentoo: [sys-apps/lm_sensors]
   nixos: [lm_sensors]
   openembedded: [lmsensors@meta-oe]
+  rhel: [lm_sensors]
   ubuntu: [lm-sensors]
 log4cplus:
   arch: [log4cplus]
