Add python3-pyqt6.qtmultimedia (#41977)
* Add python3-pyqt6.qtmultimedia

* Remove nonexistent pkg on bullseye

Co-authored-by: Marco A. Gutierrez <marcogg@marcogg.com>

* Default to package instead of null

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

---------

Co-authored-by: Marco A. Gutierrez <marcogg@marcogg.com>
Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8315,6 +8315,14 @@ python3-pyqt5.qtwebengine:
     '*': [python3-qt5-webengine, pyqtwebengine-devel]
     '8': null
   ubuntu: [python3-pyqt5.qtwebengine]
+python3-pyqt6.qtmultimedia:
+  debian:
+    '*': [python3-pyqt6.qtmultimedia]
+    bullseye: null
+  ubuntu:
+    '*': [python3-pyqt6.qtmultimedia]
+    focal: null
+    jammy: null
 python3-pyqtdarktheme-pip:
   debian:
     pip:
