--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4890,6 +4890,11 @@ python3-ansible-runner-pip:
   ubuntu:
     pip:
       packages: [ansible-runner]
+python3-antlr4:
+  debian: [python3-antlr4]
+  ubuntu:
+    '*': [python3-antlr4]
+    focal: null
 python3-anytree-pip:
   debian:
     pip:
