--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6844,6 +6844,32 @@ python3-lark-parser:
   ubuntu:
     '*': [python3-lark]
     bionic: [python3-lark-parser]
+python3-lgpio:
+  alpine:
+    pip:
+      packages: [lgpio]
+  arch:
+    pip:
+      packages: [lgpio]
+  debian:
+     pip:
+      packages: [lgpio]
+  fedora:
+     pip:
+      packages: [lgpio]
+  gentoo:
+     pip:
+      packages: [lgpio]
+  nixos:
+     pip:
+      packages: [lgpio]
+  openembedded:
+     pip:
+      packages: [lgpio]
+  rhel:
+     pip:
+      packages: [lgpio]
+  ubuntu: [python3-lgpio]
 python3-libgpiod:
   alpine: [py3-libgpiod]
   arch: [libgpiod]
