--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6869,7 +6869,11 @@ python3-lgpio:
   rhel:
     pip:
       packages: [lgpio]
-  ubuntu: [python3-lgpio]
+  ubuntu:
+  '*': [python3-lgpio]
+  focal:
+    pip:
+      packages: [lgpio]
 python3-libgpiod:
   alpine: [py3-libgpiod]
   arch: [libgpiod]
