Use 'ros' branch for robotraconteur package source

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7508,7 +7508,7 @@ repositories:
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
-      version: ros2-humble
+      version: ros
     status: maintained
   ros1_bridge:
     doc:
