--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -5859,7 +5859,7 @@ repositories:
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
-      version: ros2-iron
+      version: ros
     status: maintained
   ros1_bridge:
     doc:
