--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -9346,7 +9346,7 @@ repositories:
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
-      version: ros-noetic
+      version: ros
     status: maintained
   rocky_tf_monitor:
     doc:
