--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6090,6 +6090,12 @@ repositories:
       url: https://github.com/ros/robot_state_publisher.git
       version: jazzy
     status: maintained
+  robotraconteur:
+    source:
+      type: git
+      url: https://github.com/robotraconteur/robotraconteur.git
+      version: ros
+    status: maintained
   ros1_bridge:
     source:
       test_commits: false
