--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -5814,6 +5814,12 @@ repositories:
       url: https://github.com/ros/robot_state_publisher.git
       version: rolling
     status: maintained
+  robotraconteur:
+    source:
+      type: git
+      url: https://github.com/robotraconteur/robotraconteur.git
+      version: ros
+    status: maintained
   ros1_bridge:
     source:
       test_commits: false
