Add keys for textual and textual-dev
Signed-off-by: Michael Carroll <michael@openrobotics.org>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4212,6 +4212,20 @@ python-texttable:
       packages: [texttable]
   ubuntu:
     bionic: [python-texttable]
+python-textual-pip:
+  debian:
+    pip:
+      packages: [textual]
+  ubuntu:
+    pip:
+      packages: [textual]
+python-textual-dev-pip:
+  debian:
+    pip:
+      packages: [textual-dev]
+  ubuntu:
+    pip:
+      packages: [textual-dev]
 python-tftpy:
   debian: [python-tftpy]
   fedora: [python-tftpy]
