--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -538,6 +538,7 @@ chrony:
   gentoo: [net-misc/chrony]
   nixos: [chrony]
   opensuse: [chrony]
+  rhel: [chrony]
   ubuntu: [chrony]
 clang:
   arch: [clang]
