--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9251,6 +9251,13 @@ python3-smbus:
     '*': [python3-i2c-tools]
     '8': null
   ubuntu: [python3-smbus]
+python3-smbus2:
+  arch: [python-smbus2]
+  debian: [python3-smbus2]
+  ubuntu:
+    '*': python3-smbus2
+    jammy: null
+    focal: null
 python3-smbus2-pip:
   debian:
     pip:
