--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9255,9 +9255,9 @@ python3-smbus2:
   arch: [python-smbus2]
   debian: [python3-smbus2]
   ubuntu:
-    '*': python3-smbus2
-    jammy: null
+    '*': [python3-smbus2]
     focal: null
+    jammy: null
 python3-smbus2-pip:
   debian:
     pip:
