Add `python3-smbus2` (#42315)
* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update python.yaml

* Update rosdep/python.yaml

Co-authored-by: Steven! Ragnarök <nuclearsandwich@users.noreply.github.com>

---------

Co-authored-by: Steven! Ragnarök <nuclearsandwich@users.noreply.github.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9290,6 +9290,11 @@ python3-smbus:
     '*': [python3-i2c-tools]
     '8': null
   ubuntu: [python3-smbus]
+python3-smbus2:
+  debian: [python3-smbus2]
+  ubuntu:
+    '*': [python3-smbus2]
+    focal: null
 python3-smbus2-pip:
   debian:
     pip:
