adding python3-requests-toolbelt, python3-imutils-pip and python3-simplekml (#42352)

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6649,6 +6649,10 @@ python3-importlib-resources:
     bionic:
       pip:
         packages: [importlib-resources]
+python3-imutils-pip:
+  '*':
+    pip:
+      packages: [imutils]
 python3-inflection:
   arch: [python-inflection]
   debian: [python3-inflection]
@@ -8785,6 +8789,7 @@ python3-reportlab:
     '7': null
   ubuntu: [python3-reportlab]
 python3-requests:
+  arch: [python-requests]
   debian: [python3-requests]
   fedora: [python3-requests]
   gentoo: [dev-python/requests]
@@ -8807,6 +8812,18 @@ python3-requests-oauthlib:
     '*': ['python%{python3_pkgversion}-requests-oauthlib']
     '7': null
   ubuntu: [python3-requests-oauthlib]
+python3-requests-toolbelt:
+  arch: [python-requests-toolbelt]
+  debian: [python3-requests-toolbelt]
+  fedora: [python3-requests-toolbelt]
+  gentoo: [dev-python/requests-toolbelt]
+  nixos: [python3Packages.requests-toolbelt]
+  openembedded: [python3-requests-toolbelt@meta-python]
+  opensuse: [python-requests-toolbelt]
+  rhel:
+    '8': ['python%{python3_pkgversion}-requests-toolbelt']
+    '9': ['python%{python3_pkgversion}-requests-toolbelt']
+  ubuntu: [python3-requests-toolbelt]
 python3-retrying:
   arch: [python-retrying]
   debian: [python3-retrying]
@@ -9222,6 +9239,10 @@ python3-simplejson:
   nixos: [python3Packages.simplejson]
   openembedded: [python3-simplejson@meta-python]
   ubuntu: [python3-simplejson]
+python3-simplekml-pip:
+  '*':
+    pip:
+      packages: [simplekml]
 python3-simplification-pip:
   debian:
     pip:
