ompl: 1.6.0-1 in 'jazzy/distribution.yaml' [bloom] (#42425)

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4480,11 +4480,20 @@ repositories:
       version: master
     status: developed
   ompl:
+    doc:
+      type: git
+      url: https://github.com/ompl/ompl.git
+      version: main
     release:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/ompl-release.git
-      version: 1.5.2-2
+      version: 1.6.0-1
+    source:
+      type: git
+      url: https://github.com/ompl/ompl.git
+      version: main
+    status: developed
   openeb_vendor:
     doc:
       type: git
