ros_battery_monitoring: 1.0.0-1 in 'rolling/distribution.yaml' [bloom] (#42438)

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6128,6 +6128,14 @@ repositories:
       type: git
       url: https://github.com/ipa320/ros_battery_monitoring.git
       version: main
+    release:
+      packages:
+      - battery_state_broadcaster
+      - battery_state_rviz_overlay
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/ros_battery_monitoring-release.git
+      version: 1.0.0-1
     source:
       test_pull_requests: true
       type: git
