rosdep: openpyxl (address https://github.com/ros/rosdistro/pull/41664#pullrequestreview-2122787498)
Signed-off-by: Isaac Saito <iisaac.saito@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7552,13 +7552,14 @@ python3-openhsi-pip:
   ubuntu:
     pip:
       packages: [openhsi]
-python3-openpyxl-pip:
-  debian:
-    pip:
-      packages: [openpyxl]
-  ubuntu:
-    pip:
-      packages: [openpyxl]
+python3-openpyxl:
+  alpine: [py3-openpyxl]
+  arch: [python-openpyxl]
+  debian: [python3-openpyxl]
+  fedora: [python3-openpyxl]
+  gentoo: [dev-python/openpyxl]
+  opensuse: [python3-openpyxl]
+  ubuntu: [python3-openpyxl]
 python3-opentelemetry-api-pip:
   '*':
     pip:
