rosdep/python.yaml: openpyxl
Addressing https://github.com/ros/rosdistro/pull/42483#discussion_r1723589884

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7559,7 +7559,7 @@ python3-openpyxl:
   fedora: [python3-openpyxl]
   gentoo: [dev-python/openpyxl]
   opensuse: [python3-openpyxl]
-  rhel: ['python%{python3_pkgversion}-openpyxl']
+  rhel: [python3-openpyxl]
   ubuntu: [python3-openpyxl]
 python3-opentelemetry-api-pip:
   '*':
