add turtle nest

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -7799,6 +7799,12 @@ repositories:
       url: https://github.com/wep21/turbojpeg_compressed_image_transport.git
       version: rolling
     status: maintained
+  turtle_nest:
+    source:
+      type: git
+      url: https://github.com/Jannkar/turtle_nest.git
+      version: main
+    status: developed
   turtlebot3_msgs:
     doc:
       type: git
