--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10018,6 +10018,12 @@ repositories:
       url: https://github.com/wep21/turbojpeg_compressed_image_transport.git
       version: humble
     status: maintained
+  turtle_nest:
+    source:
+      type: git
+      url: https://github.com/Jannkar/turtle_nest.git
+      version: main
+    status: developed
   turtlebot3:
     doc:
       type: git
