add protobuf-c-compiler package
Signed-off-by: Masaya Kataoka <ms.kataoka@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7728,6 +7728,10 @@ protobuf-dev:
   rhel: [protobuf-devel, protobuf-compiler]
   slackware: [protobuf]
   ubuntu: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
+protobuf-c-compiler:
+  debian: protobuf-c-compiler
+  fedora: protobuf-c
+  ubuntu: protobuf-c-compiler
 ps-engine:
   arch: [primesense-sensor]
   debian: [ps-engine]
