add some OS packages
Signed-off-by: Masaya Kataoka <ms.kataoka@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7729,8 +7729,17 @@ protobuf-dev:
   slackware: [protobuf]
   ubuntu: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
 protobuf-c-compiler:
+  alpine: [protobuf-c]
+  arch: [protobuf-c]
   debian: [protobuf-c-compiler]
   fedora: [protobuf-c]
+  gentoo: [protobuf-c]
+  nixos: [protobufc]
+  opensuse: [protobuf-c]
+  osx:
+    homebrew:
+      packages: [protobuf-c]
+  rhel: [protobuf-c]
   ubuntu: [protobuf-c-compiler]
 ps-engine:
   arch: [primesense-sensor]
