change name of the package
Signed-off-by: Masaya Kataoka <ms.kataoka@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7729,7 +7729,7 @@ protobuf-dev:
   slackware: [protobuf]
   ubuntu: [libprotobuf-dev, protobuf-compiler, libprotoc-dev]
 protobuf-c-compiler:
-  alpine: [protobuf-c]
+  alpine: [protobuf-c-compiler]
   arch: [protobuf-c]
   debian: [protobuf-c-compiler]
   fedora: [protobuf-c]
@@ -7739,7 +7739,7 @@ protobuf-c-compiler:
   osx:
     homebrew:
       packages: [protobuf-c]
-  rhel: [protobuf-c]
+  rhel: [protobuf-c-compiler]
   ubuntu: [protobuf-c-compiler]
 ps-engine:
   arch: [primesense-sensor]
