robotraconteur: 1.2.2-1 in 'jazzy/distribution.yaml' [bloom] (#42401)
* robotraconteur: 1.2.2-1 in 'jazzy/distribution.yaml' [bloom]

* Use ros2-gbp

* Update distribution.yaml

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6140,6 +6140,11 @@ repositories:
       version: jazzy
     status: maintained
   robotraconteur:
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/robotraconteur-release.git
+      version: 1.2.2-1
     source:
       type: git
       url: https://github.com/robotraconteur/robotraconteur.git
