Adds vector_pursuit_controller docs and source URLs to humble index (#42466)
Co-authored-by: Arthur <arthur@blackcoffeerobotics.com>

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10743,6 +10743,16 @@ repositories:
       url: https://github.com/ros2/variants.git
       version: humble
     status: maintained
+  vector_pursuit_controller:
+    doc:
+      type: git
+      url: https://github.com/blackcoffeerobotics/vector_pursuit_controller.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/blackcoffeerobotics/vector_pursuit_controller.git
+      version: master
+    status: developed
   velodyne:
     doc:
       type: git
