depthai-ros: 2.10.0-1 in 'jazzy/distribution.yaml' [bloom] (#42650)

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1237,6 +1237,30 @@ repositories:
       url: https://github.com/luxonis/depthai-core.git
       version: ros-release
     status: developed
+  depthai-ros:
+    doc:
+      type: git
+      url: https://github.com/luxonis/depthai-ros.git
+      version: jazzy
+    release:
+      packages:
+      - depthai-ros
+      - depthai_bridge
+      - depthai_descriptions
+      - depthai_examples
+      - depthai_filters
+      - depthai_ros_driver
+      - depthai_ros_msgs
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/luxonis/depthai-ros-release.git
+      version: 2.10.0-1
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/luxonis/depthai-ros.git
+      version: jazzy
+    status: developed
   depthimage_to_laserscan:
     doc:
       type: git
