turtle_nest: 1.0.1-1 in 'iron/distribution.yaml' [bloom] (#42657)

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8090,6 +8090,15 @@ repositories:
       version: rolling
     status: maintained
   turtle_nest:
+    doc:
+      type: git
+      url: https://github.com/Jannkar/turtle_nest.git
+      version: main
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros2-gbp/turtle_nest-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/Jannkar/turtle_nest.git
