Add some python packages for nixos

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6672,6 +6672,7 @@ python3-influxdb:
   debian: [python3-influxdb]
   fedora: [python3-influxdb]
   opensuse: [python3-influxdb]
+  nixos: [python3Packages.influxdb]
   rhel: [python3-influxdb]
   ubuntu: [python3-influxdb]
 python3-influxdb-client-pip:
@@ -9144,6 +9145,7 @@ python3-seaborn:
   debian: [python3-seaborn]
   fedora: [python3-seaborn]
   gentoo: [dev-python/seaborn]
+  nixos: [python3Packages.seaborn]
   ubuntu: [python3-seaborn]
 python3-segno:
   debian:
@@ -9153,6 +9155,7 @@ python3-segno:
     '*': [python3-segno]
     '36': null
     '37': null
+  nixos: [python3Packages.segno]
   rhel:
     '*': [python3-segno]
     '7': null
