Enable pull request tests on gz_vendor packages
Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2340,6 +2340,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_cmake_vendor-release.git
       version: 0.0.8-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_cmake_vendor.git
       version: jazzy
@@ -2355,6 +2356,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_common_vendor-release.git
       version: 0.0.5-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_common_vendor.git
       version: rolling
@@ -2370,6 +2372,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_dartsim_vendor-release.git
       version: 0.0.2-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_dartsim_vendor.git
       version: rolling
@@ -2385,6 +2388,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_fuel_tools_vendor-release.git
       version: 0.0.5-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_fuel_tools_vendor.git
       version: rolling
@@ -2415,6 +2419,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_launch_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_launch_vendor.git
       version: rolling
@@ -2430,6 +2435,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_math_vendor-release.git
       version: 0.0.6-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_math_vendor.git
       version: jazzy
@@ -2445,6 +2451,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_msgs_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_msgs_vendor.git
       version: rolling
@@ -2460,6 +2467,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_ogre_next_vendor-release.git
       version: 0.0.5-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_ogre_next_vendor.git
       version: rolling
@@ -2475,6 +2483,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_physics_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_physics_vendor.git
       version: rolling
@@ -2490,6 +2499,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_plugin_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_plugin_vendor.git
       version: rolling
@@ -2505,6 +2515,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_rendering_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_rendering_vendor.git
       version: rolling
@@ -2538,6 +2549,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_sensors_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_sensors_vendor.git
       version: rolling
@@ -2553,6 +2565,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_sim_vendor-release.git
       version: 0.0.5-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_sim_vendor.git
       version: rolling
@@ -2568,6 +2581,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_tools_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_tools_vendor.git
       version: rolling
@@ -2583,6 +2597,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_transport_vendor-release.git
       version: 0.0.5-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_transport_vendor.git
       version: rolling
@@ -2598,6 +2613,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_utils_vendor-release.git
       version: 0.0.4-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_utils_vendor.git
       version: jazzy
@@ -7598,6 +7614,7 @@ repositories:
       url: https://github.com/ros2-gbp/sdformat_vendor-release.git
       version: 0.0.6-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/sdformat_vendor.git
       version: rolling
