--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2126,6 +2126,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_cmake_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_cmake_vendor.git
       version: rolling
@@ -2141,6 +2142,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_common_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_common_vendor.git
       version: rolling
@@ -2156,6 +2158,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_dartsim_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_dartsim_vendor.git
       version: rolling
@@ -2171,6 +2174,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_fuel_tools_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_fuel_tools_vendor.git
       version: rolling
@@ -2186,6 +2190,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_gui_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_gui_vendor.git
       version: rolling
@@ -2201,6 +2206,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_launch_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_launch_vendor.git
       version: rolling
@@ -2216,6 +2222,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_math_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_math_vendor.git
       version: rolling
@@ -2231,6 +2238,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_msgs_vendor-release.git
       version: 0.1.2-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_msgs_vendor.git
       version: rolling
@@ -2246,6 +2254,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_ogre_next_vendor-release.git
       version: 0.1.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_ogre_next_vendor.git
       version: rolling
@@ -2261,6 +2270,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_physics_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_physics_vendor.git
       version: rolling
@@ -2276,6 +2286,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_plugin_vendor-release.git
       version: 0.1.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_plugin_vendor.git
       version: rolling
@@ -2291,6 +2302,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_rendering_vendor-release.git
       version: 0.1.1-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_rendering_vendor.git
       version: rolling
@@ -2324,6 +2336,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_sensors_vendor-release.git
       version: 0.1.2-3
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_sensors_vendor.git
       version: rolling
@@ -2339,6 +2352,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_sim_vendor-release.git
       version: 0.1.2-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_sim_vendor.git
       version: rolling
@@ -2354,6 +2368,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_tools_vendor-release.git
       version: 0.1.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_tools_vendor.git
       version: rolling
@@ -2369,6 +2384,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_transport_vendor-release.git
       version: 0.1.2-2
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_transport_vendor.git
       version: rolling
@@ -2384,6 +2400,7 @@ repositories:
       url: https://github.com/ros2-gbp/gz_utils_vendor-release.git
       version: 0.1.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/gz_utils_vendor.git
       version: rolling
@@ -7208,6 +7225,7 @@ repositories:
       url: https://github.com/ros2-gbp/sdformat_vendor-release.git
       version: 0.1.3-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/gazebo-release/sdformat_vendor.git
       version: rolling
