Correct opencl-headers for nixos (#42704)
On nixos the `opencl-headers` package contains just the `C` headers. `opencl-clhpp` contains the C++ headers. This is analogous to the `ubuntu` and `arch` `opencl-headers` packages which also contain the C++ headers. This fixes building `rviz-map-plugin` on noetic.

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7378,7 +7378,7 @@ opencl-headers:
   debian: [opencl-headers]
   fedora: [opencl-headers]
   gentoo: [dev-util/opencl-headers]
-  nixos: [opencl-headers]
+  nixos: [opencl-clhpp]
   openembedded: [opencl-headers@meta-oe]
   rhel: [opencl-headers]
   ubuntu: [opencl-headers]
