Add some python packages for nixos (#42668)
* Add some python packages for nixos

* Alphabetize

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6671,6 +6671,7 @@ python3-inflection-pip:
 python3-influxdb:
   debian: [python3-influxdb]
   fedora: [python3-influxdb]
+  nixos: [python3Packages.influxdb]
   opensuse: [python3-influxdb]
   rhel: [python3-influxdb]
   ubuntu: [python3-influxdb]
@@ -9152,6 +9153,7 @@ python3-seaborn:
   debian: [python3-seaborn]
   fedora: [python3-seaborn]
   gentoo: [dev-python/seaborn]
+  nixos: [python3Packages.seaborn]
   ubuntu: [python3-seaborn]
 python3-segno:
   debian:
@@ -9161,6 +9163,7 @@ python3-segno:
     '*': [python3-segno]
     '36': null
     '37': null
+  nixos: [python3Packages.segno]
   rhel:
     '*': [python3-segno]
     '7': null
