performance_test: 2.3.0-1 in 'jazzy/distribution.yaml' [bloom] (#42925)
* performance_test: 2.3.0-1 in 'jazzy/distribution.yaml' [bloom]

* Update distribution.yaml

Update performance_test doc version to master

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4831,12 +4831,12 @@ repositories:
     doc:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
-      version: 1.2.1
+      version: master
     release:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/performance_test-release.git
-      version: 2.0.0-2
+      version: 2.3.0-1
     source:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
