added python3 noisereduce (#42823)
* added python3 noisereduce

* Update rosdep/python.yaml

Co-authored-by: Shane Loretz <shane.loretz@gmail.com>

---------

Co-authored-by: Shane Loretz <shane.loretz@gmail.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7356,6 +7356,10 @@ python3-nmcli-pip:
     pip:
       depends: [network-manager]
       packages: [nmcli]
+python3-noisereduce-pip:
+  '*':
+    pip:
+      packages: [noisereduce]
 python3-nose:
   arch: [python-nose]
   debian: [python3-nose]
