add python3-pyotp (#42428)
* Update python.yaml

added pyotp to python.yaml in  rosdep

* Update python.yaml

Add python3-pyotp package

* Update rosdep/python.yaml

Co-authored-by: Chris Lalancette <clalancette@gmail.com>

* Fix lexicographical sort order.

---------

Co-authored-by: Chris Lalancette <clalancette@gmail.com>
Co-authored-by: Steven! Ragnarök <steven@nuclearsandwich.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8320,6 +8320,16 @@ python3-pyosmium:
   fedora: [python3-osmium]
   nixos: [python3Packages.pyosmium]
   ubuntu: [python3-pyosmium]
+python3-pyotp:
+  arch: [python-pyotp]
+  debian: [python3-pyotp]
+  fedora: [python3-pyotp]
+  freebsd: [py311-pyotp]
+  opensuse: [python3-pyotp]
+  rhel:
+    '*': [python3-pyotp]
+    '8': null
+  ubuntu: [python3-pyotp]
 python3-pyparsing:
   arch: [python-pyparsing]
   debian: [python3-pyparsing]
