performance_test: 2.3.0-1 in 'iron/distribution.yaml' [bloom] (#42926)
* performance_test: 2.3.0-1 in 'iron/distribution.yaml' [bloom]

* Update distribution.yaml

Update performance_test doc version to master

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4544,12 +4544,12 @@ repositories:
     doc:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
-      version: 1.2.1
+      version: master
     release:
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/performance_test-release.git
-      version: 1.2.1-4
+      version: 2.3.0-1
     source:
       type: git
       url: https://gitlab.com/ApexAI/performance_test.git
