talos_robot: 2.0.1-1 in 'humble/distribution.yaml' [bloom] (#42953)

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -9763,6 +9763,24 @@ repositories:
       url: https://github.com/ros2/system_tests.git
       version: humble
     status: developed
+  talos_robot:
+    release:
+      packages:
+      - talos_bringup
+      - talos_controller_configuration
+      - talos_description
+      - talos_description_calibration
+      - talos_description_inertial
+      - talos_robot
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/pal-gbp/talos_robot-release.git
+      version: 2.0.1-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/talos_robot.git
+      version: humble-devel
+    status: developed
   tango_icons_vendor:
     release:
       tags:
