Fix linter error
Signed-off-by: Øystein Sture <os@skarvtech.com>

--- a/.github/workflows/release_cache.yaml
+++ b/.github/workflows/release_cache.yaml
@@ -31,4 +31,4 @@ jobs:
         body: "Generated cache for ${{ env.ROSDISTRO_TAG }}"
         tag_name: "${{ env.ROSDISTRO_TAG }}"
         files: "${{ env.ROSDISTRO_TARGET }}-${{ env.ROSDISTRO_RELEASE }}-cache.yaml.gz"
-        generate_release_notes: False
+        generate_release_notes: false
