Fix linter error #2
Co-authored-by: Tomoya Fujita <Tomoya.Fujita@sony.com>

--- a/.github/workflows/release_cache.yaml
+++ b/.github/workflows/release_cache.yaml
@@ -2,7 +2,7 @@
 ---
 name: release-cache
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
     tags:
     - '**'  # Double ** needed to match tags containing '/'
